changed the name of the main company from Maxglow to Princess,changed a media query from 470px to 500px added one with maxwidth 780px for the about body and added textalign justify to the p tag.fixed d nav bar.added the address tag to all contact sessions.changed the tags of the images and its container in the about and gallery section to figure and figcaption tag.added the main colors of the other two sub company pages.

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ nav a:active {
 .sublink {
   position: absolute;
   width: 170px;
-  top: calc(var(--nav-bar-height) - 30px);
+  top: calc(var(--nav-bar-height) - 35px);
   right: 0;
   border: solid;
   text-align: center;
@@ -357,6 +357,9 @@ main > .company-about,
 #gallery .gallery-link:hover {
   background-color: var(--main-bg);
 }
+address{
+  font-style: normal;
+}
 /* footer */
 footer {
   background-color: var(--footer-bg);
@@ -419,7 +422,7 @@ footer i {
     padding: 10px 0;
   }
   .sublink {
-    top: 30px;
+    top: 25px;
   }
   .sublink:last-child {
     right: -10px;
